fixed logo alignment

--- a/public/bootstrap/less/trpAppsPage.less
+++ b/public/bootstrap/less/trpAppsPage.less
@@ -42,6 +42,7 @@ a {
   display: block;
   margin-bottom: 0px;
   padding-bottom: 0px;
+
 }
 
 
@@ -65,6 +66,7 @@ a {
   padding-bottom: 12px;
   max-width: 960px;
   min-width: 960px;
+  height: 96px;
 }
 
 .trpJobSpec {
